--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: white;
     }
     .container {
       width: 90%;
@@ -25,7 +25,7 @@
     .text-box {
       flex: 1;
       padding: 20px;
-      background: yellow;
+      background: #e6f3ff;
     }
     .image-box {
       flex: 1;
@@ -50,7 +50,7 @@
     .center-text {
       text-align: center;
       padding: 20px;
-      background: yellow;
+      background: #e6f3ff;
       margin: 20px auto;
       width: 50%;
     }
@@ -63,14 +63,20 @@
 </head>
 <body>
 <div class="container">
+  <h1>INOVATIVNI PROJEKAT</h1>
   <div class="section">
     <div class="text-box">
-      <h2>Cleaning up Ocean Pollution</h2>
-      <p>It is critical that we join together to fight ocean trash. There are multiple agencies, nonprofits, and corporations working on this.</p>
+      <h2>Okeani</h2>
+      <p>Okeani su jedno od
+        najmanje istraženih djelova planete, ključnih za ekosistem i
+        dom mnogih neotkrivenih vrsta. Suočeni sa
+        zagađenjem, klimatskim promjenama i
+        gubitkom biodiverziteta, njihova zaštita
+        postaje veoma važna.</p>
       <a href="#" class="button">Read More</a>
     </div>
     <div class="image-box">
-      <img src="img/happyturtle.webp" alt="Turtle with plastic">
+      <img src="img/ocean.webp" alt="Turtle with plastic">
     </div>
   </div>
 
