--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Ocean Pollution Awareness</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Pacifico', cursive;;
       margin: 0;
       padding: 0;
       background-color: white;
+      background: url('img/ocean-background.webp') no-repeat center center fixed;
+      background-size: cover;
     }
     .container {
       width: 90%;
@@ -67,12 +69,10 @@
   <div class="section">
     <div class="text-box">
       <h2>Okeani</h2>
-      <p>Okeani su jedno od
-        najmanje istraženih djelova planete, ključnih za ekosistem i
-        dom mnogih neotkrivenih vrsta. Suočeni sa
-        zagađenjem, klimatskim promjenama i
-        gubitkom biodiverziteta, njihova zaštita
-        postaje veoma važna.</p>
+      <p>Okeani su među
+        najmanje istraženim djelovima naše planete. Oni su ključni za ekosistem i
+        dom su mnogih još neotkrivenih vrsta. Suočeni sa zagađenjem, klimatskim promjenama i
+        gubitkom biodiverziteta, njihova zaštita okeana postaje veoma važna.</p>
       <a href="#" class="button">Read More</a>
     </div>
     <div class="image-box">
