Background image and text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       background-color: white;
-      background: url('img/ocean-background.webp') no-repeat center center fixed;
+      background: url('img/ocean-background2.webp') no-repeat center center fixed;
       background-size: cover;
     }
     .container {
@@ -28,6 +28,7 @@
       flex: 1;
       padding: 20px;
       background: #e6f3ff;
+      border-radius: 20px;
     }
     .image-box {
       flex: 1;
@@ -72,7 +73,7 @@
       <p>Okeani su među
         najmanje istraženim djelovima naše planete. Oni su ključni za ekosistem i
         dom su mnogih još neotkrivenih vrsta. Suočeni sa zagađenjem, klimatskim promjenama i
-        gubitkom biodiverziteta, njihova zaštita okeana postaje veoma važna.</p>
+        gubitkom biodiverziteta, njihova zaštita postaje veoma važna.</p>
       <a href="#" class="button">Read More</a>
     </div>
     <div class="image-box">
