--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       font-display: swap;
     }
     body {
-      font-family: 'Pacifico', cursive;
+      font-family: "Comic Sans MS", cursive;
       font-size: larger;
       margin: 0;
       padding: 0;
