--- a/index.html
+++ b/index.html
@@ -121,22 +121,22 @@
     <div class="text-box">
       <h2>Ecology - We Can Protect The Oceans</h2>
       <p>Our oceans are facing threats from pollution and habitat destruction. We must act now.</p>
-      <div class="hidden-content" id="content1">
+      <div class="hidden-content" id="content2">
         <hr/>
-        <p>Ovo je test</p>
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/eKumVFvGHFA?si=rucwFUh1KG0kQ1Lo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
       </div>
-      <button class="button toggle-button" data-target="content1">Detaljnije</button>
+      <button class="button toggle-button" data-target="content2">Detaljnije</button>
     </div>
   </div>
 
   <div class="center-text">
     <h2>10 Things You Can Do to Save the Ocean</h2>
     <p>Take action today and make a difference.</p>
-    <div class="hidden-content" id="content1">
+    <div class="hidden-content" id="content3">
       <hr/>
       <p>Content here!</p>
     </div>
-    <button class="button toggle-button" data-target="content1">Detaljnije</button>
+    <button class="button toggle-button" data-target="content3">Detaljnije</button>
   </div>
 
   <div class="section">
