Font comic removed

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ocean Pollution Awareness</title>
   <style>
-    @font-face {
-    url('fonts/Pacifico-Regular.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-      font-display: swap;
-    }
+    /*@font-face {*/
+    /*url('fonts/Pacifico-Regular.ttf') format('truetype');*/
+    /*  font-weight: normal;*/
+    /*  font-style: normal;*/
+    /*  font-display: swap;*/
+    /*}*/
     body {
       font-family: "Comic Sans MS", cursive;
       font-size: larger;
