Dodata sekcija sa istraživanjem

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ocean Pollution Awareness</title>
+  <title>FLL Inovativni projekat</title>
   <style>
     /*@font-face {*/
     /*url('fonts/Pacifico-Regular.ttf') format('truetype');*/
@@ -93,6 +93,7 @@
 <body>
 <div class="container">
   <h1>INOVATIVNI PROJEKAT</h1>
+
   <div class="section">
     <div class="text-box">
       <h2>Okeani</h2>
@@ -102,10 +103,8 @@
         gubitkom biodiverziteta, njihova zaštita postaje veoma važna.</p>
       <div class="hidden-content" id="content1">
         <hr/>
-        <p>Našim projektom želimo pokazati
-          jednostavno rješenje koristeći inovativne
-          tehnologije poput kamera i senzora za
-          istraživanje, i smanjenje negativnog uticaja.</p>
+        <p> Pomoću naših 3D naočara zavirimo u svijet okeana i upoznajmo se sa njihovim stanovnicima: <br/>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/eKumVFvGHFA?si=rucwFUh1KG0kQ1Lo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
       </div>
       <button class="button toggle-button" data-target="content1">Detaljnije</button>
     </div>
@@ -119,30 +118,55 @@
       <img src="img/turtle_in_trash.webp" alt="Pollution in ocean">
     </div>
     <div class="text-box">
-      <h2>Ecology - We Can Protect The Oceans</h2>
-      <p>Our oceans are facing threats from pollution and habitat destruction. We must act now.</p>
+      <h2>Problem - zagađenje</h2>
+      <p>Tokom našeg istraživanja saznali smo za brojne probleme sa kojima se se suočava svijet okeana</p>
       <div class="hidden-content" id="content2">
         <hr/>
-        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/eKumVFvGHFA?si=rucwFUh1KG0kQ1Lo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+        <p>
+          U okeane se izlivaju velike količine otpada, a najveći dio otpada čine plastika. Plastika se ne razgrađuje i dospijeva u morske organizme, a time i u ljudski organizam. <br/>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/HQTUWK7CM-Y?si=WUqxCzCMOAAzR-2Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </p>
       </div>
       <button class="button toggle-button" data-target="content2">Detaljnije</button>
     </div>
   </div>
 
-  <div class="center-text">
-    <h2>10 Things You Can Do to Save the Ocean</h2>
-    <p>Take action today and make a difference.</p>
+  <div class="section">
+    <div class="text-box">
+      <h2>Problem - istraživanje novih vrsta</h2>
+      <p>Tokom našeg istraživanja saznali smo za brojne probleme sa kojima se se suočava svijet okeana</p>
+      <div class="hidden-content" id="content4">
+        <hr/>
+        <p>
+          U okeane se izlivaju velike količine otpada, a najveći dio otpada čine plastika. Plastika se ne razgrađuje i dospijeva u morske organizme, a time i u ljudski organizam. <br/>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/HQTUWK7CM-Y?si=WUqxCzCMOAAzR-2Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </p>
+      </div>
+      <button class="button toggle-button" data-target="content4">Detaljnije</button>
+    </div>
+    <div class="image-box">
+      <img src="img/research_submarine.webp" alt="Istraživanje okeana">
+    </div>
+  </div>
+
+<div class="center-text">
+    <h2>Naše razmišljanje kako pomoći okeanima</h2>
+    <p>Smislili smo Akvatron - naše inovativno </p>
     <div class="hidden-content" id="content3">
       <hr/>
-      <p>Content here!</p>
+      <p>Našim projektom želimo pokazati
+        jednostavno rješenje koristeći inovativne
+        tehnologije poput kamera i senzora za
+        istraživanje, i smanjenje negativnog uticaja.</p>
     </div>
     <button class="button toggle-button" data-target="content3">Detaljnije</button>
   </div>
 
   <div class="section">
     <div class="text-box">
-      <h2>Make Safe, Sustainable Seafood Choices</h2>
-      <p>Help reduce the demand for overexploited species by choosing sustainable seafood.</p>
+      <h2>Sačuvajmo okeane!</h2>
+      <p>Okeani održavaju život na Zemlji. Od zdravlja okeana zavisi i naše zdravlje!
+        Oni proizvode vazduh koji dišemo i upravljaju našom klimom.</p>
 
     </div>
     <div class="image-box">
