Zamijenjen comic font i dodata jos jedna sekcija

--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FLL Inovativni projekat</title>
   <style>
-    /*@font-face {*/
-    /*url('fonts/Pacifico-Regular.ttf') format('truetype');*/
-    /*  font-weight: normal;*/
-    /*  font-style: normal;*/
-    /*  font-display: swap;*/
-    /*}*/
+    @font-face {
+      font-family: 'Comic Sans MS';
+      src:
+      url('fonts/ComicSansMS3.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'Pacifico';
+      src:
+    url('fonts/Pacifico-Regular.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
     body {
       font-family: "Comic Sans MS", cursive;
       font-size: larger;
