--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     .button {
-      font-family: 'Pacifico', cursive;
+      font-family: 'Comic Sans MS', cursive;
       font-size: larger;
       display: inline-block;
       padding: 10px 15px;
