Popunjene nove sekcije

--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
       <div class="hidden-content" id="content4">
         <hr/>
         <p>
-          U okeane se izlivaju velike količine otpada, a najveći dio otpada čine plastika. Plastika se ne razgrađuje i dospijeva u morske organizme, a time i u ljudski organizam. <br/>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/HQTUWK7CM-Y?si=WUqxCzCMOAAzR-2Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          Problem koji smo odabrali je otkrivanje novih vrsta. Okeani su dom mnogih vrsta koje još nisu otkrivene, a ljudi su oduvijek bili vrsta koja žudi za novim otkrićima i naučnim dostignućima.
+          Prilikom istraživanja, istraživači se suočavaju sa brojnim preprekama koje su u nekim situacijama opasne po njihov život. Okean skriva mnoge tajne i bića, među kojima se nalaze mnoge otrovne vrste.
+          Saznali smo da kada se otkrije nova vrsta, mora se uzeti uzorak, donijeti na površinu i ispitivati u laboratoriji. Ovaj proces je dosta dug, a ako uzmemo u obzir i to da vrsta može biti opasna po život, shvatili smo da je potrebno da napravimo projekat koji može sve da odradi na licu mjesta, bez ugrožavanja okoline i koji može da se stopi sa njom.
+
         </p>
       </div>
       <button class="button toggle-button" data-target="content4">Detaljnije</button>
@@ -161,7 +163,7 @@
 
 <div class="center-text">
     <h2>Naše razmišljanje kako pomoći okeanima</h2>
-    <p>Smislili smo Akvatron - naše inovativno </p>
+    <p>Kao naš problem odabrali smo otkrivanje novih vrsta. Tokom našeg istraživanja, ovaj problem se stalno ponavljao, pa smo odlučili da se fokusiramo na njega. Kako to pomoći naučnicima i roniocima u otkrivanju tajni koje okean čuva u svojim dubninama?</p>
     <div class="hidden-content" id="content3">
       <hr/>
       <p>Našim projektom želimo pokazati
