Dodate nove sekcije

--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@
     <p>Kao naš problem odabrali smo otkrivanje novih vrsta. Tokom našeg istraživanja, ovaj problem se stalno ponavljao, pa smo odlučili da se fokusiramo na njega. Kako to pomoći naučnicima i roniocima u otkrivanju tajni koje okean čuva u svojim dubninama?</p>
     <div class="hidden-content" id="content3">
       <hr/>
-      <p>Našim projektom želimo pokazati
+      <p>
+        Upoznajte AQUATRON-a! On je podvodni dron koji na licu mjesta, pomoću kamera i senzora koje mu se nalaze u očima, može da skenira i analizia novu vrstu. Kada mu stigne komanda da skenira, on prolazi kroz baze podataka i na osnovu skeniranog analizira iz koje je porodice ta vrsta, čime se hrani, da li je otrovna itd. a ako pronađe još nešto, upisuje ga direktno u bazu podataka.
+        U međuvremenu, na površini, dolaze naučnici koji na glavi imaju 3D naočare koje im omogućavaju da vide sve što i AQUATRON. Na taj način, oni mogu da prate šta AQUATRON radi i da mu daju dodatne instrukcije.
+        Izgleda kao riba klovn, riba koja nije prijetnja nijednoj pokretnoj vrsti u vodi.
+        Kako bismo bili sigurni da ga nijedan lovac neće upecati, ima u sebi radar, koji brodovima šalje signal da se udalje od njega.
+        Našim projektom želimo pokazati
         jednostavno rješenje koristeći inovativne
         tehnologije poput kamera i senzora za
         istraživanje, i smanjenje negativnog uticaja.</p>
