Dodata prezentacija inovativnog projekta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FLL Inovativni projekat</title>
+  <title>FLL Inovativni projekat FLL 2025</title>
   <style>
     @font-face {
       font-family: 'Comic Sans MS';
@@ -102,7 +102,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>INOVATIVNI PROJEKAT</h1>
+  <h1 style="text-align: center">INOVATIVNI PROJEKAT FLL 2025</h1>
 
   <div class="section">
     <div class="text-box">
@@ -184,7 +184,7 @@
       <h2>Sačuvajmo okeane!</h2>
       <p>Okeani održavaju život na Zemlji. Od zdravlja okeana zavisi i naše zdravlje!
         Oni proizvode vazduh koji dišemo i upravljaju našom klimom.</p>
-
+      <p>Prezentaciju našeg inovativnog projekta možete preuzeti <a href="doc/KlariksMAX%20inovativni%20projekat%20FLL%202025.pdf" target="_blank">OVDJE</a></p>
     </div>
     <div class="image-box">
       <img src="img/happy_fish.webp" alt="Tropical fish in ocean">
